--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-12 p-3">
                     <h1 class="text-center text-white">Belajar Grid System</h1>
                 </div>
-                <p>login</p>
+                <p>logino</p>
             </div>
             <div class="row">
                 <div class="col-6 text-end">
